fixing size for subscription modal on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2610,12 +2610,12 @@ ul {
 
 @media (max-width: 575.98px) {
   .subscription-modal__box {
-    width: 50vw;
-    height: 40vh;
+    width: 70vw;
+    height: 50vh;
   }
 
   .subscription-modal__box-confirmation {
-    width: 50vw;
+    width: 80vw;
     height: 40vh;
   }
   .form-subscription-modal__title {
